--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="/bootstrap/debug/bootstrap.bundle.js"></script>
     <link rel="stylesheet" href="/unpoly/debug/unpoly.css">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
     <header class="text-end sticky-top">
