--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1</title>
+    <title>Portfolio</title>
     <script src="/unpoly/debug/unpoly.js"></script>
     <script src="/bootstrap/debug/bootstrap.bundle.js"></script>
     <link rel="stylesheet" href="/unpoly/debug/unpoly.css">
