--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
             <section class="sect contacto" id="contacto">
                 <h2 class="display-2 title text-center">Contacto</h1>
                     <div class="d-flex flex-wrap justify-content-evenly pt-5">
-                        <div class="col-md px-3">
+                        <div class="col-md">
                             <img class="icono" src="assets/linkedin.svg" width="32" height="32" alt="linkedin icon"> <a href="https://www.linkedin.com/in/diego-garcia-722437305/">Linkedin</a>
                         </div>
-                        <div class="col-md">
-                            <img class="icono" src="assets/github.svg" width="32" height="32" alt="linkedin icon"> <a href="https://github.com/ElDyrke">GitHub - ElDyrke</a>
+                        <div class="col-md px-3">
+                            <img class="icono" src="assets/github.svg" width="32" height="32" alt="linkedin icon"> <a href="https://github.com/ElDyrke">GitHub</a>
                         </div>
                         <div class="col-md">
-                            <img class="icono" src="assets/envelope-at-fill.svg" width="32" height="32" alt="linkedin icon"> <a href="mailto:degs2121@gmail.com">degs2121@gmail.com</a>
+                            <img class="icono" src="assets/envelope-at-fill.svg" width="32" height="32" alt="linkedin icon"> <a href="mailto:dawguiro@gmail.com">dawguiro@gmail.com</a>
                         </div>
                     </div>
                 
@@ -98,7 +98,7 @@
     </main>
 
     <footer>
-        Hecho por Diego García
+        © El Gato Claudio
     </footer>
 
     <script>
