--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <img class="icono" src="assets/github.svg" width="32" height="32" alt="linkedin icon"> <a href="https://github.com/ElDyrke">GitHub</a>
                         </div>
                         <div class="col-md">
-                            <img class="icono" src="assets/envelope-at-fill.svg" width="32" height="32" alt="linkedin icon"> <a href="mailto:dawguiro@gmail.com">dawguiro@gmail.com</a>
+                            <img class="icono" src="assets/envelope-at-fill.svg" width="32" height="32" alt="linkedin icon"> <a href="mailto:contacto@gatoclaudiowebdev.xyz">contacto@gatoclaudiowebdev.xyz</a>
                         </div>
                     </div>
                 
