--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
             </section>
             <section class="sect contacto" id="contacto">
                 <h2 class="display-2 title text-center">Contacto</h1>
-                    <div class="d-flex flex-wrap justify-content-evenly pt-5">
-                        <div class="col-md">
+                    <div class="d-flex flex-wrap justify-content-evenly pt-5 text-center">
+                        <div class="col">
                             <img class="icono" src="assets/linkedin.svg" width="32" height="32" alt="linkedin icon"> <a href="https://www.linkedin.com/in/diego-garcia-722437305/">Linkedin</a>
                         </div>
-                        <div class="col-md px-3">
-                            <img class="icono" src="assets/github.svg" width="32" height="32" alt="linkedin icon"> <a href="https://github.com/ElDyrke">GitHub</a>
+                        <div class="col p-3">
+                            <img class="icono" src="assets/github.svg" width="32" height="32" alt="linkedin icon">
+                            <a href="https://github.com/ElDyrke">GitHub</a>
                         </div>
-                        <div class="col-md">
+                        <div class="col" style="min-width: fit-content;">
                             <img class="icono" src="assets/envelope-at-fill.svg" width="32" height="32" alt="linkedin icon"> <a href="mailto:contacto@gatoclaudiowebdev.xyz">contacto@gatoclaudiowebdev.xyz</a>
                         </div>
                     </div>
