--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                     </div>
                 </div>
             </div>
-            <section class="proyectos" id="proyectos" >
+            <section class="sect proyectos" id="proyectos" >
                 <h2 class="display-2 title text-center">Proyectos</h1>
                 <div class="row justify-content-center">
-                    <div class="col col-md-6">
+                    <div class="col col-md-8 col-lg-6">
                         <div class="card m-auto" tabindex="0">
                             <img
                                 class="card-img-top"
@@ -83,15 +83,16 @@
             <section class="sect contacto" id="contacto">
                 <h2 class="display-2 title text-center">Contacto</h1>
                     <div class="d-flex flex-wrap justify-content-evenly pt-5 text-center">
-                        <div class="col">
+                        <div class="col p-3">
                             <img class="icono" src="assets/linkedin.svg" width="32" height="32" alt="linkedin icon"> <a href="https://www.linkedin.com/in/diego-garcia-722437305/">Linkedin</a>
                         </div>
                         <div class="col p-3">
                             <img class="icono" src="assets/github.svg" width="32" height="32" alt="linkedin icon">
                             <a href="https://github.com/ElDyrke">GitHub</a>
                         </div>
-                        <div class="col" style="min-width: fit-content;">
-                            <img class="icono" src="assets/envelope-at-fill.svg" width="32" height="32" alt="linkedin icon"> <a href="mailto:contacto@gatoclaudiowebdev.xyz">contacto@gatoclaudiowebdev.xyz</a>
+                        <div class="col p-3">
+                            <img class="icono" src="assets/envelope-at-fill.svg" width="32" height="32" alt="linkedin icon"> 
+                            <a href="mailto:contacto@gatoclaudiowebdev.xyz">contacto@gatoclaudiowebdev.xyz</a>
                         </div>
                     </div>
                 
