--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <h1 class="display-1 lh-1 title">Diego García <br><span class="display-6 ms-md-4">Analista Programador</span></h1>
                         <p class="lead text-muted ms-2 ms-md-4" >Certificaciones <a href="https://www.freecodecamp.org/certification/eldyrke/responsive-web-design">Responsive web Design</a> y <a href="https://www.freecodecamp.org/certification/eldyrke/front-end-development-libraries">Front End Development Libraries</a> de <a href="https://www.freecodecamp.org/">FreeCodeCamp</a>, experiencia en proyectos Full-Stack y enfoque en la resolución de problemas</p>
                     </div>
-                    <div class="row col-md-4">
+                    <div class="img-wrap row col-md-4">
                         <div class="col text-center">
                             <img class="img-fluid" style="max-height: 300px;" src="assets/Diseño sin título(2).png" alt="">
                         </div>
