--- a/index.html
+++ b/index.html
@@ -84,15 +84,20 @@
                 <h2 class="display-2 title text-center">Contacto</h1>
                     <div class="d-flex flex-wrap justify-content-evenly pt-5 text-center">
                         <div class="col p-3">
-                            <img class="icono" src="assets/linkedin.svg" width="32" height="32" alt="linkedin icon"> <a href="https://www.linkedin.com/in/diego-garcia-722437305/">Linkedin</a>
+                            <img class="icono" src="assets/linkedin.svg" width="32" height="32" alt="linkedin icon"><br>
+                            <a href="https://www.linkedin.com/in/diego-garcia-722437305/">Linkedin</a>
                         </div>
                         <div class="col p-3">
-                            <img class="icono" src="assets/github.svg" width="32" height="32" alt="linkedin icon">
+                            <img class="icono" src="assets/github.svg" width="32" height="32" alt="linkedin icon"><br>
                             <a href="https://github.com/ElDyrke">GitHub</a>
                         </div>
                         <div class="col p-3">
-                            <img class="icono" src="assets/envelope-at-fill.svg" width="32" height="32" alt="linkedin icon"> 
+                            <img class="icono" src="assets/envelope-at-fill.svg" width="32" height="32" alt="linkedin icon"><br>
                             <a href="mailto:contacto@gatoclaudiowebdev.xyz">contacto@gatoclaudiowebdev.xyz</a>
+                        </div>
+                        <div class="col p-3">
+                            <img class="icono" src="assets/instagram.svg" width="32" height="32" alt="linkedin icon"><br>
+                            <a href="https://www.instagram.com/gatoclaudio.webdev/">instagram</a>
                         </div>
                     </div>
                 
