--- a/form.html
+++ b/form.html
@@ -20,11 +20,11 @@
         </div>
 
             <div class="d-flex m-auto me-0 mb-0">
-                <a class="nav-link active" href="#inicio" aria-current="page"
+                <a class="nav-link active" href="/index.html" aria-current="page"
                     >Inicio</a
                 >
-                <a class="nav-link" href="#proyectos">Proyectos</a>
-                <a class="nav-link btn" href="#contacto">Contacto</a>
+                <a class="nav-link" href="/index.html#proyectos">Proyectos</a>
+                <a class="nav-link btn" href="/index.html#contacto">Contacto</a>
                 
             </div>
         </nav>
