--- a/index.html
+++ b/index.html
@@ -59,24 +59,30 @@
 
     <main>
         
-            <div class="hero container-fluid sect" id="inicio">
+            <div class="hero" id="inicio">
                 <div class="row">
-                    <div class="col-md-8">
-                        <h1 class="display-1 lh-1 title">Diego García <br><span class="display-6 ms-md-4">Analista Programador</span></h1>
-                        <p class="lead text-muted ms-2 ms-md-4" >Certificaciones <a href="https://www.freecodecamp.org/certification/eldyrke/responsive-web-design">Responsive web Design</a> y <a href="https://www.freecodecamp.org/certification/eldyrke/front-end-development-libraries">Front End Development Libraries</a> de <a href="https://www.freecodecamp.org/">FreeCodeCamp</a>, experiencia en proyectos Full-Stack y enfoque en la resolución de problemas</p>
+                    <div class="col-lg-6">
+                        <h1 class="display-1 lh-1 title mb-3">Diego García </h1>
+                        <div class="ms-2 ms-md-5 subtitle">
+                            <h2 class="display-5 text-primary-emphasis">Analista Programador</h2>
+                            <p class="lead text-muted fs-4" >Certificaciones <a href="https://www.freecodecamp.org/certification/eldyrke/responsive-web-design">Responsive web Design</a> y <a href="https://www.freecodecamp.org/certification/eldyrke/front-end-development-libraries">Front End Development Libraries</a> de <a href="https://www.freecodecamp.org/">FreeCodeCamp</a>, experiencia en proyectos Full-Stack y enfoque en la resolución de problemas</p>
+                        </div>
                     </div>
-                    <div class="img-wrap row col-md-4">
+                    <div class="img-wrap col-lg">
+                        <img class="hero-img" src="/assets/laptop-2017978_1280.png" alt="fotografía de código html">
+                    </div>
+                    <!-- <div class="img-wrap row col-md-4">
                         <div class="col text-center">
                             <img class="img-fluid" style="max-height: 300px;" src="assets/1.png" alt="">
                         </div>
                         <div class="col text-center">
                             <img class="img-fluid" style="max-height: 300px;" src="assets/2.png" alt="">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <section class="sect proyectos" id="proyectos" >
-                <h2 class="display-2 title text-center">Proyectos</h1>
+                <h2 class="display-2 title text-center">Proyectos</h2>
                 <div class="row justify-content-around">
                     <div class="col-12 col-md-8 col-lg-6 my-2">
                         <div class="card m-auto" tabindex="0">
